--- a/styles.css
+++ b/styles.css
@@ -40,13 +40,26 @@ li{
     padding: 20px;
     border: 3px solid #dadde1;
     border-radius: 5px;}
-  
-  .nashville {
-    color: black;
-    margin-bottom: 20px;
-    text-transform: capitalize;
+    
+    .weather-temperature img{
+     margin-left: 0px;
+      margin-right: 0px;
+      height: 90px;
+      width: 90px;
+      padding-bottom: 20px;
   }
   
+  .overview {
+    color: black;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+  }
+  .temp {
+    color: rgb(33,33,33);
+        font-size: 64px;
+        line-height: 1;
+        font-weight: 400;
+  }
   
   
   #search-form {
